tests/snapshots/snapshots__fixture_vaul_level4.snap
---
source: tests/snapshots.rs
expression: output
---
browser.ts
     1→export function isMobileFirefox(): boolean | undefined {
    10→export function isMac(): boolean | undefined {
    14→export function isIPhone(): boolean | undefined {
    18→export function isSafari(): boolean | undefined {
    22→export function isIPad(): boolean | undefined {
    30→export function isIOS(): boolean | undefined {
    34→export function testPlatform(re: RegExp): boolean | undefined {
constants.ts
     1→export const TRANSITIONS = {
     6→export const VELOCITY_THRESHOLD = 0.4;
     8→export const CLOSE_THRESHOLD = 0.25;
    10→export const SCROLL_LOCK_TIMEOUT = 100;
    12→export const BORDER_RADIUS = 8;
    14→export const NESTED_DISPLACEMENT = 16;
    16→export const WINDOW_TOP_OFFSET = 26;
    18→export const DRAG_CLASS = 'vaul-dragging';
context.ts
     4→interface DrawerContextValue {
     5→  drawerRef: React.RefObject<HTMLDivElement>;
     6→  overlayRef: React.RefObject<HTMLDivElement>;
     7→  onPress: (event: React.PointerEvent<HTMLDivElement>) => void;
     8→  onRelease: (event: React.PointerEvent<HTMLDivElement> | null) => void;
     9→  onDrag: (event: React.PointerEvent<HTMLDivElement>) => void;
    10→  onNestedDrag: (event: React.PointerEvent<HTMLDivElement>, percentageDragged: number) => void;
    11→  onNestedOpenChange: (o: boolean) => void;
    12→  onNestedRelease: (event: React.PointerEvent<HTMLDivElement>, open: boolean) => void;
    13→  dismissible: boolean;
    14→  isOpen: boolean;
    15→  isDragging: boolean;
    16→  keyboardIsOpen: React.MutableRefObject<boolean>;
    17→  snapPointsOffset: number[] | null;
    18→  snapPoints?: (number | string)[] | null;
    19→  activeSnapPointIndex?: number | null;
    20→  modal: boolean;
    21→  shouldFade: boolean;
    22→  activeSnapPoint?: number | string | null;
    23→  setActiveSnapPoint: (o: number | string | null) => void;
    24→  closeDrawer: () => void;
    25→  openProp?: boolean;
    26→  onOpenChange?: (o: boolean) => void;
    27→  direction: DrawerDirection;
    28→  shouldScaleBackground: boolean;
    29→  setBackgroundColorOnScale: boolean;
    30→  noBodyStyles: boolean;
    31→  handleOnly?: boolean;
    32→  container?: HTMLElement | null;
    33→  autoFocus?: boolean;
    34→  shouldAnimate?: React.RefObject<boolean>;
    35→}
    37→export const DrawerContext = React.createContext<DrawerContextValue>({
    69→export const useDrawerContext = () => {
helpers.ts
     3→interface Style {
     4→  [key: string]: string;
     5→}
     7→const cache = new WeakMap();
     9→export function isInView(el: HTMLElement): boolean {
    23→export function set(el: Element | HTMLElement | null | undefined, styles: Style, ignoreCache = false) {
    42→export function reset(el: Element | HTMLElement | null, prop?: string) {
    59→export const isVertical = (direction: DrawerDirection) => {
    72→export function getTranslate(element: HTMLElement, direction: DrawerDirection): number | null {
    90→export function dampenValue(v: number) {
    94→export function assignStyle(element: HTMLElement | null | undefined, style: Partial<CSSStyleDeclaration>) {
   105→/**
   106→ * Receives functions as arguments and returns a new function that calls all.
   107→ */
   108→export function chain<T>(...fns: T[]) {
index.tsx
    27→export interface WithFadeFromProps {
    28→  /**
    29→   * Array of numbers from 0 to 100 that corresponds to % of the screen a given snap point should take up.
    30→   * Should go from least visible. Example `[0.2, 0.5, 0.8]`.
    31→   * You can also use px values, which doesn't take screen height into account.
    32→   */
    33→  snapPoints: (number | string)[];
    34→  /**
    35→   * Index of a `snapPoint` from which the overlay fade should be applied. Defaults to the last snap point.
    36→   */
    37→  fadeFromIndex: number;
    38→}
    40→export interface WithoutFadeFromProps {
    41→  /**
    42→   * Array of numbers from 0 to 100 that corresponds to % of the screen a given snap point should take up.
    43→   * Should go from least visible. Example `[0.2, 0.5, 0.8]`.
    44→   * You can also use px values, which doesn't take screen height into account.
    45→   */
    46→  snapPoints?: (number | string)[];
    47→  fadeFromIndex?: never;
    48→}
    50→export type DialogProps = {
   139→export function Root({
   803→export const Overlay = React.forwardRef<HTMLDivElement, React.ComponentPropsWithoutRef<typeof DialogPrimitive.Overlay>>(
   831→export type ContentProps = React.ComponentPropsWithoutRef<typeof DialogPrimitive.Content>;
   833→export const Content = React.forwardRef<HTMLDivElement, ContentProps>(function (
   989→export type HandleProps = React.ComponentPropsWithoutRef<'div'> & {
   993→const LONG_HANDLE_PRESS_TIMEOUT = 250;
   994→const DOUBLE_TAP_TIMEOUT = 120;
   996→export const Handle = React.forwardRef<HTMLDivElement, HandleProps>(function (
  1098→export function NestedRoot({ onDrag, onOpenChange, open: nestedIsOpen, ...rest }: DialogProps) {
  1128→type PortalProps = React.ComponentPropsWithoutRef<typeof DialogPrimitive.Portal>;
  1130→export function Portal(props: PortalProps) {
  1137→export const Drawer = {
types.ts
     1→export type DrawerDirection = 'top' | 'bottom' | 'left' | 'right';
     2→export interface SnapPoint {
     3→  fraction: number;
     4→  height: number;
     5→}
     7→export type AnyFunction = (...args: any) => any;
use-composed-refs.ts
     5→type PossibleRef<T> = React.Ref<T> | undefined;
     7→/**
     8→ * Set a given ref to a given value
     9→ * This utility takes care of different types of refs: callback refs and RefObject(s)
    10→ */
    11→function setRef<T>(ref: PossibleRef<T>, value: T) {
    19→/**
    20→ * A utility to compose multiple refs together
    21→ * Accepts callback refs and RefObject(s)
    22→ */
    23→function composeRefs<T>(...refs: PossibleRef<T>[]) {
    27→/**
    28→ * A custom hook that composes multiple refs
    29→ * Accepts callback refs and RefObject(s)
    30→ */
    31→function useComposedRefs<T>(...refs: PossibleRef<T>[]) {
use-controllable-state.ts
     5→type UseControllableStateParams<T> = {
    11→type SetStateFn<T> = (prevState?: T) => T;
    13→function useCallbackRef<T extends (...args: any[]) => any>(callback: T | undefined): T {
    24→function useUncontrolledState<T>({ defaultProp, onChange }: Omit<UseControllableStateParams<T>, 'prop'>) {
    39→export function useControllableState<T>({ prop, defaultProp, onChange = () => {} }: UseControllableStateParams<T>) {
use-position-fixed.ts
    15→export function usePositionFixed({
use-prevent-scroll.ts
     6→const KEYBOARD_BUFFER = 24;
     8→export const useIsomorphicLayoutEffect = typeof window !== 'undefined' ? useLayoutEffect : useEffect;
    10→interface PreventScrollOptions {
    11→  /** Whether the scroll lock is disabled. */
    12→  isDisabled?: boolean;
    13→  focusCallback?: () => void;
    14→}
    16→function chain(...callbacks: any[]): (...args: any[]) => void {
    27→const visualViewport = typeof document !== 'undefined' && window.visualViewport;
    29→export function isScrollable(node: Element): boolean {
    34→export function getScrollParent(node: Element): Element {
    47→const nonTextInputTypes = new Set([
    63→/**
    64→ * Prevents scrolling on the document body on mount, and
    65→ * restores it on unmount. Also ensures that content does not
    66→ * shift due to the scrollbars disappearing.
    67→ */
    68→export function usePreventScroll(options: PreventScrollOptions = {}) {
   118→function preventScrollMobileSafari() {
   243→function setStyle(element: HTMLElement, style: keyof React.CSSProperties, value: string) {
   257→function addEvent<K extends keyof GlobalEventHandlersEventMap>(
   258→  target: EventTarget,
   259→  event: K,
   260→  handler: (this: Document, ev: GlobalEventHandlersEventMap[K]) => any,
   261→  options?: boolean | AddEventListenerOptions,
   262→) {
   272→function scrollIntoView(target: Element) {
   294→export function isInput(target: Element) {
use-scale-background.ts
     6→const noop = () => () => {};
     8→export function useScaleBackground() {
use-snap-points.ts
     7→export function useSnapPoints({
